// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly where fline height is set 1`] = `
<p
  className="sc-bdVaJa ieptdn"
>
  Hello
</p>
`;

exports[`renders correctly where font weight is set 1`] = `
<p
  className="sc-bdVaJa fAPgYf"
>
  Hello
</p>
`;

exports[`renders correctly where letter spacing is set 1`] = `
<p
  className="sc-bdVaJa gjHahq"
>
  Hello
</p>
`;

exports[`renders correctly where only font size is set 1`] = `
<p
  className="sc-bdVaJa fvIAY"
>
  hello
</p>
`;
